fix: Vertical alignment of dismiss-filter

--- a/app/stylesheets/alchemy/admin/filters.scss
+++ b/app/stylesheets/alchemy/admin/filters.scss
@@ -50,6 +50,7 @@ div#sorting_select {
 
   .dismiss-filter {
     display: inline-flex;
+    align-items: center;
     justify-content: center;
     width: var(--spacing-4);
     color: var(--tag-active-text-color);
